Fix:  Posts will now stay overlapping image when main gets wider than 1600 pixels.

--- a/assets/css/responsive-default.css
+++ b/assets/css/responsive-default.css
@@ -63,6 +63,6 @@
 
 @media screen and (min-height: 768px) and (min-width: 1024px) {
   main {
-    max-width: 2500px;
+    max-width: 1600px;
   }
 }
